# vulkan-video-encode-simple

./: .gitignore  CMakeLists.txt  LICENSE  README.md  h264parameterset.hpp  main.cpp  utility.hpp  videoencoder.cpp  videoencoder.hpp
shaders/: rgb-ycbcr-shader-2plane.comp  rgb-ycbcr-shader-3plane.comp  shader.vert
